[project]
name = "gitfive"
version = "1.1.8"
authors = [
    {name = "mxrch", email = "mxrch.dev@pm.me"},
]
description = "Track down GitHub users."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MPL-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
keywords=["osint", "pentest", "cybersecurity", "investigation", "hideandsec", "malfrats", "git", "github"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
gitfive = "gitfive.gitfive:main"

[tool.setuptools.packages.find]
include = ["gitfive", "gitfive.*"]

[project.urls]
"Homepage" = "https://github.com/mxrch/gitfive"
"Bug Reports" = "https://github.com/mxrch/gitfive/issues"
"Funding" = "https://github.com/sponsors/mxrch"
"Source" = "https://github.com/mxrch/gitfive"

[tool.poetry]
name = "gitfive"
version = "1.1.8"
description = "Track down GitHub users."
authors = ["mxrch <mxrch.dev@pm.me>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
anyio = "^4.6.0"
rich = "^13.9.1"
levenshtein = "^0.26.0"
pillow = "^10.4.0"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
imagehash = "^4.3.1"
gitpython = "^3.1.43"
trio = "^0.26.2"
googlesearch-python = "^1.2.5"
pwinput = "^1.0.3"
unidecode = "^1.3.8"
alive-progress = "^3.1.5"
packaging = "^24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"